# myRalphie

./: .gitignore  LICENSE  RALPH_SETUP_README.md  README.md  pyproject.toml
.github/workflows/: ci.yml
ralph/: archive.py  circuit_breaker.py  cli.py  config.py  cost_tracker.py  detect.py  doctor.py  executor.py  interview.py  logger.py  loop.py  notifier.py  pr.py  prd.py  progress.py  scaffold.py  session.py
ralph/templates/: interview_prompt.md  iteration_prompt.md
tests/: test_archive.py  test_circuit_breaker.py  test_config.py  test_detect.py  test_executor.py  test_goal.py  test_pr.py  test_progress.py  test_scaffold.py  test_status_parser.py
