[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ralph-loop"
version = "1.0.0"
description = "Custom Ralph Wiggum autonomous Claude Code loop"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.27",
]

[project.scripts]
ralph = "ralph.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ralph*"]
